src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor In-Trial Client Success Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Feature/Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk of Migration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Closed/Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Phone Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App will not install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App does not function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App does not meet minimum requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contact from developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accidental Trial/No ecomm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Mature Enough/No Products/Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Integration w/3rd Party Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Wholesale/B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Multi-Language Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>What competitor platform is the prospect considering?</description>
        <inlineHelpText>What competitor platform is the prospect considering?</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>Contact__r.Id</formula>
        <label>ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Bad_Phone_Number__c</fullName>
        <formula>Contact__r.Bad_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Bad Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <description>Contact Mailing Country</description>
        <formula>Contact__r.MailingCountry</formula>
        <inlineHelpText>Contact Mailing Country</inlineHelpText>
        <label>Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Domain__c</fullName>
        <description>Domain of the contact email.</description>
        <formula>SUBSTITUTE( Contact_Email__c , LEFT( Contact_Email__c , FIND(&quot;@&quot;, Contact_Email__c)), NULL)</formula>
        <label>Contact Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Formula__c</fullName>
        <description>Contact Phone Number</description>
        <formula>Contact__r.Phone</formula>
        <inlineHelpText>Contact Phone Number</inlineHelpText>
        <label>Contact Phone Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Sent_Date__c</fullName>
        <description>Used by the App Partner Team</description>
        <inlineHelpText>Used by the App Partner Team</inlineHelpText>
        <label>Contract Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>IUnited States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>----------</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Deps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CouponCode__c</fullName>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Platform__c</fullName>
        <description>What platform is the prospect on? Using during the initial sales cycle.</description>
        <inlineHelpText>What platform is the prospect on? Using during the initial sales cycle.</inlineHelpText>
        <label>Current Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not currently selling online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3dcart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayacart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce (BC to BC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create A Shoppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CubeCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoDaddy - QSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemonstand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal&apos;s eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miva Merchant v4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpenCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSMax commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PureCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShoppePro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Store_URL__c</fullName>
        <inlineHelpText>For Migration Products only, this field must be populated.</inlineHelpText>
        <label>Current Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Overage_Call_Indicator__c</fullName>
        <label>Data Overage Call Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_of_Trial__c</fullName>
        <description>Days from Trial Start Date to Purchase Date if sold or Today if trial is current/expired.</description>
        <formula>IF(ISBLANK(  StartDate__c  ) = FALSE, BLANKVALUE(PurchaseDate__c,Today()) - StartDate__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days was this store has not been purchased.</inlineHelpText>
        <label>Day of Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve_App__c</fullName>
        <description>Number of days from opportunity create date to Approved date. Blank if app approved date is not populated or a negative value due to date difference in our initial opp import</description>
        <formula>IF((App_Approved_Date__c  - DATEVALUE( CreatedDate )) &gt; 0,(App_Approved_Date__c  - DATEVALUE( CreatedDate )),null)</formula>
        <inlineHelpText>Number of days from opportunity create date to Approved date. Blank if app approved date is not populated or a negative value due to date difference in our initial opp import</inlineHelpText>
        <label>Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <formula>CloseDate - BLANKVALUE( StartDate__c , DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Notes__c</fullName>
        <description>Used for the PRM Integration -- PRM writes to this field</description>
        <inlineHelpText>Used for the PRM Integration -- PRM writes to this field</inlineHelpText>
        <label>Deal Registration Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dec_Criteria_Dec_Appr_Processes__c</fullName>
        <label>Dec. Criteria, Dec. &amp; Appr. Processes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Notes__c</fullName>
        <label>Decision Maker Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Requested_Date__c</fullName>
        <description>Field used to determine if there was a ever a demo request submitted and if so, the date of the demo request.</description>
        <label>Demo Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direct_Dialer_Eligible__c</fullName>
        <formula>IF( Do_Not_Call__c = false &amp;&amp; Contact_Bad_Phone_Number__c = false 
	&amp;&amp; Contact__r.Phone != NULL 
	&amp;&amp; ISPICKVAL(Status__c,&apos;Active&apos;)
	&amp;&amp; NOT ISPICKVAL(StageName,&apos;Purchased&apos;) &amp;&amp; NOT ISPICKVAL(StageName,&apos;Closed Lost&apos;)
	&amp;&amp; Day_of_Trial__c &lt;= 16
	&amp;&amp; NOT CONTAINS(Contact__r.Email , &apos;@bigcommerce.com&apos;) 
	&amp;&amp; NOT ISPICKVAL(Status__c, &apos;Cancelled&apos;) 
/*Dialer Testing for BAP-2931: Day of Trial is not blank AND Opportunity Owner = &apos;markmeg&apos; */
        &amp;&amp; NOT ISBLANK(Day_of_Trial__c) 
        &amp;&amp; Owner.Alias = &apos;markmeg&apos;
/* End of Dialer Testing */
	&amp;&amp; RecordTypeId = &apos;01213000000AUty&apos; 
	&amp;&amp; NOT ISPICKVAL(Experience__c,&apos;I\&apos;m doing research as a student, app developer or job applicant&apos;)
	&amp;&amp; (NOT( 
		( 
		CONTAINS(Contact__r.Email, &apos;hotmail&apos;) || 
		CONTAINS(Contact__r.Email, &apos;gmail&apos;) || 
		CONTAINS(Contact__r.Email, &apos;aol.com&apos;)|| 
		CONTAINS(Contact__r.Email, &apos;yahoo&apos;)|| 
		CONTAINS(Contact__r.Email, &apos;outlook&apos;)|| 
		CONTAINS(Contact__r.Email, &apos;msn.com&apos;)|| 
		CONTAINS(Contact__r.Email, &apos;sbcglobal&apos;)|| 
		CONTAINS(Contact__r.Email, &apos;fishbowlinventory&apos;)
		) 
		&amp;&amp; (ISPICKVAL(Experience__c,&apos;New to eCommerce&apos;) || ISPICKVAL(Experience__c,&apos;Set up a new online business&apos;)) &amp;&amp; 
		NOT( 
			CONTAINS(totango__TotangoInsights__c,&apos;AddedProduct1&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialAddedProduct&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialProductImport&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialCustomerImport&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialPaidTheme&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialCustomerGroup&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialAbandonedCart&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialGoogleTrusted&apos;) 
			|| CONTAINS(totango__TotangoInsights__c,&apos;TrialGoogleAnalytics&apos;) 
			|| Referral_ID__c != NULL
			|| CONTAINS(MarketingCampaign__c, &apos;Brand&apos;)
			)
		) 
	|| (ISBLANK(Contact__r.Email) &amp;&amp; ISPICKVAL(Status__c, &apos;Active&apos;)) )
	&amp;&amp; NOT (CONTAINS(BLANKVALUE(Referral_ID__c,&apos;NA&apos;),&apos;paypal&apos;)
			&amp;&amp; NOT ((ISPICKVAL(Experience__c,&apos;Switching from a Competitor,Switch from a different ecommerce platform,switching&apos;))
				|| NOT (
					CONTAINS(Contact__r.Email, &apos;hotmail&apos;) || 
					CONTAINS(Contact__r.Email, &apos;gmail&apos;) || 
					CONTAINS(Contact__r.Email, &apos;aol.com&apos;)|| 
					CONTAINS(Contact__r.Email, &apos;yahoo&apos;)|| 
					CONTAINS(Contact__r.Email, &apos;outlook&apos;)|| 
					CONTAINS(Contact__r.Email, &apos;msn.com&apos;)|| 
					CONTAINS(Contact__r.Email, &apos;sbcglobal&apos;)||
					CONTAINS(Contact__r.Email, &apos;fishbowlinventory&apos;)
					))
		) 
	,true,false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Dialer Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed__c</fullName>
        <label>Topics Discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Design/Theme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Help Driving Traffic to Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Website Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DisplayAd__c</fullName>
        <label>Display Ad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Engine_Eligible__c</fullName>
        <formula>Do_Not_Call__c = false 
&amp;&amp; Contact_Bad_Phone_Number__c = false 
&amp;&amp; Contact__r.Phone != NULL 
&amp;&amp; ISPICKVAL(Status__c,&apos;Active&apos;) 
&amp;&amp; NOT ISPICKVAL(StageName,&apos;Purchased&apos;) &amp;&amp; NOT ISPICKVAL(StageName,&apos;Closed Lost&apos;) 
&amp;&amp; NOT CONTAINS(Contact__r.Email , &apos;@bigcommerce.com&apos;) 
&amp;&amp; NOT ISPICKVAL(Status__c, &apos;Cancelled&apos;) 
&amp;&amp; Owner.Alias = &apos;markmeg&apos; 
&amp;&amp; RecordTypeId = &apos;01213000000AUty&apos; 
&amp;&amp; NOT ISPICKVAL(Experience__c,&apos;I\&apos;m doing research as a student, app developer or job applicant&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Engine Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <formula>Contact__r.DoNotCall</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_need_ongoing_support__c</fullName>
        <label>Ongoing Support Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing development support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EBQ_Added__c</fullName>
        <label>zEBQ Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EB_Comments__c</fullName>
        <label>zEB Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EB_Date__c</fullName>
        <label>zEB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EB_Next_Step__c</fullName>
        <label>zEB Next Step</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EB_Rating__c</fullName>
        <label>zEB Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENT_Support__c</fullName>
        <description>Field that tracks the type of support being received - requested via BAP-3081.</description>
        <label>ENT Support</label>
        <picklist>
            <picklistValues>
                <fullName>Express Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <description>Allows you to open the record in edit view in a new tab straight from the report page!</description>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/e&apos;,&apos;edit&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows you to open the record in edit view in a new tab straight from the report page!</inlineHelpText>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_5_Discount__c</fullName>
        <description>Did the store owner sign a contract making them eligible for a 5% discount? Used for pricing 2015</description>
        <inlineHelpText>Did the store owner sign a contract making them eligible for a 5% discount? Set by sales. Used for pricing 2015</inlineHelpText>
        <label>Eligible for Discount</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_Account_Manager__c</fullName>
        <formula>Account.SSC__r.Full_Name__c</formula>
        <label>Enterprise Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Partner_Request_Status__c</fullName>
        <inlineHelpText>Status for requesting an Enterprise Partner to help on a client/prospect store</inlineHelpText>
        <label>Enterprise Partner Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_Tier__c</fullName>
        <formula>IF( ProductID__c = &apos;146&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T1&apos;) ), 1, 
IF( ProductID__c = &apos;147&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T2&apos;) ), 2, 
IF( ProductID__c = &apos;148&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T3&apos;) ), 3, 
IF( ProductID__c = &apos;149&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T4&apos;) ), 4, 
IF( ProductID__c = &apos;150&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T5&apos;) ), 5, 
IF( ProductID__c = &apos;151&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T6&apos;) ), 6, 
IF( ProductID__c = &apos;152&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T7&apos;) ), 7, 
IF( ProductID__c = &apos;153&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T8&apos;) ), 8, 
IF( ProductID__c = &apos;154&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T9&apos;) ), 9, 
IF( ProductID__c = &apos;155&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T01&apos;) ), 10, 
IF( ProductID__c = &apos;156&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T11&apos;) ), 11, 
IF( ProductID__c = &apos;157&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T12&apos;) ), 12, 
IF( ProductID__c = &apos;158&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T13&apos;) ), 13, 
IF( ProductID__c = &apos;159&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T14&apos;) ), 14, 
IF( ProductID__c = &apos;160&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T15&apos;) ), 15, 
IF( ProductID__c = &apos;161&apos; || (CONTAINS(Product__c,&apos;ENTERPRISE&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T16&apos;) ), 16, 
IF( ProductID__c = &apos;162&apos; || (CONTAINS(Product__c,&apos;ENT&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T17&apos;) ), 17, 
IF( ProductID__c = &apos;163&apos; || (CONTAINS(Product__c,&apos;ENT&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T18&apos;) ), 18, 
IF( ProductID__c = &apos;164&apos; || (CONTAINS(Product__c,&apos;ENT&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T19&apos;) ), 19, 
IF( ProductID__c = &apos;165&apos; || (CONTAINS(Product__c,&apos;ENT&apos;) &amp;&amp; CONTAINS(Product__c,&apos;T20&apos;) ), 20, 
IF( ProductID__c = &apos;166&apos; || (CONTAINS(Product__c,&apos;ENT&apos;) &amp;&amp; CONTAINS(Product__c,&apos;TMAX&apos;) ), 21, 
0)))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Product__c</fullName>
        <description>For use by the direct team. Adds estimated plan product to the trial opportunity.</description>
        <inlineHelpText>For use by the direct team. Adds estimated plan product to the trial opportunity.</inlineHelpText>
        <label>Expected Plan</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsorship_Notes__c</fullName>
        <description>Notes to provide for needed to be reached out by a member of the executive team. Requested by BAP-2900.</description>
        <label>Executive Sponsorship Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsorship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When a Sales Leader has to get an executive leader involved to close the deal.</description>
        <inlineHelpText>When a Sales Leader has to get an executive leader involved to close the deal.</inlineHelpText>
        <label>Executive Sponsorship</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Sales leader as an Executive Sponsor before saving the opportunity. Thanks!</errorMessage>
            <filterItems>
                <field>User.LastName</field>
                <operation>equals</operation>
                <value>Bellm, Kalemba, Griffin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Executive,Sales Leader</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_contract__c</fullName>
        <description>Used for pricing 2015</description>
        <inlineHelpText>Used for pricing 2015</inlineHelpText>
        <label>Existing contract?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>